removed position fixed - too much trouble - i need a better way of dealing with the overscroll

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,7 +10,7 @@
   align-items: center;
 
   h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 700;
     margin-bottom: 1rem;
   }
@@ -85,8 +85,6 @@
     .btn {
       font-size: 1.75rem;
     }
-
-    position: fixed; /* Prevents scrolling */
     // Step layout remains stacked at this size
   }
 }
